Update API and Add USAreaCode Json File
