# controllers/InformationService.js
@@ -1,5 +1,24 @@
 'use strict';
 
+exports.getAllAreaCode = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+  **/
+    var examples = {};
+  examples['application/json'] = [ {
+  "code" : "201",
+  "state" : "New Jersey"
+} ];
+  if(Object.keys(examples).length > 0) {
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
+  }
+  else {
+    res.end();
+  }
+
+}
+
 exports.getAreaCodeDescription = function(args, res, next) {
   /**
    * parameters expected in the args:
@@ -21,7 +40,7 @@ exports.getAreaCodeDescription = function(args, res, next) {
   else {
     res.end();
   }
-  
+
 }
 
 exports.getPhoneDescription = function(args, res, next) {
@@ -49,6 +68,5 @@ exports.getPhoneDescription = function(args, res, next) {
   else {
     res.end();
   }
-  
-}
 
+}
